added custom login and logout templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,10 +42,22 @@
         {% endblock content %}
     </div>
 
+
     {# The Footer #}
     <div class="footer">
         <div class="container">
-            {#            <p>Copyright Ryan Burton</p>#}
+        <hr>
+            <div>{% if user.is_authenticated %}
+                Hi {{ user.username }}!
+                <p><a href="{% url 'logout' %}">logout</a></p>
+            {% else %}
+                <p>You are not logged in</p>
+                <a href="{% url 'login' %}">login</a>
+                <p><a href="{% url 'password_reset' %}">reset password</a></p>
+            {% endif %}
+            </div>
+        <hr />
+            <p>Copyright 2019 Ryan Burton</p>
         </div>
     </div>
 </div>
