limited player list to team of logged in coach user

--- a/tasksandrewards/templates/tasksandrewards/player_list.html
+++ b/tasksandrewards/templates/tasksandrewards/player_list.html
@@ -3,10 +3,12 @@
 {% block nav-style %}mkt-nav{% endblock nav-style %}
 
 {% block content %}
-<h2>Players</h2>
+    <h2>{{ coach }}</h2>
+    <h2> Your Team: {{ team }}</h2>
+<h2>Your Players:</h2>
     <ul>
     {% for object in object_list %}
-       <a href="{% url 'app:player-detail' pk=object.id %}"> <li>{{ object.name }}</li></a>
+        <li><a href="{% url 'app:player-detail' pk=object.id %}"> {{ object.name }}</a> <span class="badge badge-pill badge-primary">{{ object.score }}</span>  updated:{{ object.updated_at }}</li>
     {% endfor %}
     </ul>
 
