--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,7 @@
-{# HTML5 declaration #}
 <!DOCTYPE html>
 <html>
-{# Make modifiable head elements #}
 <head>
-    <title>{% block title %}Home {% endblock title %}</title>
+    <title>{% block title %}Tasks & Rewards {% endblock title %}</title>
     {% block head_favicon %}
     {% endblock head_favicon %}
     {% block head_meta %}
@@ -21,8 +19,8 @@
 
     {% block head_css %}
         <link rel="stylesheet"
-              href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
-              integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+              href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+              integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
               crossorigin="anonymous">
     {% endblock head_css %}
 
@@ -32,7 +30,36 @@
 <div class="container">
     {# Navigation Menu #}
     <header>
+{#    <div class="container">#}
+        <nav class="navbar  navbar-expand-lg navbar-light bg-light">
 
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" >Tasks & Rewards{% if user.is_authenticated %} - {{ user.username }}{% endif %}</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="navbar-nav mr-auto">
+                    <a class="nav-item nav-link" href="{% url 'app:player-list' %}">Team</a>
+                    <a class="nav-item nav-link" href="{% url 'app:task-list' %}">Tasks</a>
+                    <a class="nav-item nav-link" href="{% url 'app:reward-list' %}">Rewards</a>
+
+
+                </div>
+            <span class="navbar-text">
+      <a class="nav-link"  {% if user.is_authenticated %} href="{% url 'logout' %}"> Logout
+                            {% else %} href="{% url 'login' %}"> Login
+
+                        {% endif %}</a>
+                    </li>
+
+
+
+    </span>
+            </div>
+        </nav>
+{#</div>#}
     </header>
     {# The Document Body #}
     <div id="site-wrapper">
@@ -46,17 +73,17 @@
     {# The Footer #}
     <div class="footer">
         <div class="container">
-        <hr>
-            <div>{% if user.is_authenticated %}
-                Hi {{ user.username }}!
-                <p><a href="{% url 'logout' %}">logout</a></p>
-            {% else %}
-                <p>You are not logged in</p>
-                <a href="{% url 'login' %}">login</a>
-                <p><a href="{% url 'password_reset' %}">reset password</a></p>
-            {% endif %}
-            </div>
-        <hr />
+{#            <hr>#}
+{#            <div>{% if user.is_authenticated %}#}
+{#                Hi {{ user.username }}!#}
+{#                <p><a href="{% url 'logout' %}">logout</a></p>#}
+{#            {% else %}#}
+{#                <p>You are not logged in</p>#}
+{#                <a href="{% url 'login' %}">login</a>#}
+{#                <p><a href="{% url 'password_reset' %}">reset password</a></p>#}
+{#            {% endif %}#}
+{#            </div>#}
+            <hr/>
             <p>Copyright 2019 Ryan Burton</p>
         </div>
     </div>
@@ -65,14 +92,26 @@
 
 {# Set of blocks that can be used to display JavaScript files #}
 {% block footer_javascript %}
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
-            integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
             crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
-            integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
+
+{##}
+{#    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"#}
+{#            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"#}
+{#            crossorigin="anonymous"></script>#}
+{#    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"#}
+{#            integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"#}
+{#            crossorigin="anonymous"></script>#}
+{#    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"#}
+{#            integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"#}
+{#            crossorigin="anonymous"></script>#}
 {% endblock footer_javascript %}
 </html>
