--- a/tasksandrewards/templates/tasksandrewards/player_list.html
+++ b/tasksandrewards/templates/tasksandrewards/player_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Home{% endblock title %}
+{#{% block title %}Home{% endblock title %}#}
 {% block nav-style %}mkt-nav{% endblock nav-style %}
 
 {% block content %}
