--- a/tasksandrewards/templates/tasksandrewards/task_list.html
+++ b/tasksandrewards/templates/tasksandrewards/task_list.html
@@ -1,12 +1,14 @@
-{% extends 'base.html' %}
+{% extends 'base2.html' %}
 {#{% block title %}Home{% endblock title %}#}
 {#{% block nav-style %}mkt-nav{% endblock nav-style %}#}
-
+{% block title %}
+   {{ block.super }} Tasks
+{% endblock %}
 {% block content %}
     <div class="container">
 <h2>Tasks:</h2>
 {#    {% if object_list %}#}
-        <table border="1">
+        <table class="table" border="1">
         <thead>
         <tr>
             <th>Name</th>
