--- a/templates/base.html
+++ b/templates/base.html
@@ -30,36 +30,9 @@
 <div class="container">
     {# Navigation Menu #}
     <header>
-{#    <div class="container">#}
-        <nav class="navbar  navbar-expand-lg navbar-light bg-light">
+    {% block nav %}
+    {% endblock %}
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" >Tasks & Rewards{% if user.is_authenticated %} - {{ user.username }}{% endif %}</a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link" href="{% url 'app:player-list' %}">Team</a>
-                    <a class="nav-item nav-link" href="{% url 'app:task-list' %}">Tasks</a>
-                    <a class="nav-item nav-link" href="{% url 'app:reward-list' %}">Rewards</a>
-
-
-                </div>
-            <span class="navbar-text">
-      <a class="nav-link"  {% if user.is_authenticated %} href="{% url 'logout' %}"> Logout
-                            {% else %} href="{% url 'login' %}"> Login
-
-                        {% endif %}</a>
-                    </li>
-
-
-
-    </span>
-            </div>
-        </nav>
-{#</div>#}
     </header>
     {# The Document Body #}
     <div id="site-wrapper">
@@ -71,22 +44,9 @@
 
 
     {# The Footer #}
-    <div class="footer">
-        <div class="container">
-{#            <hr>#}
-{#            <div>{% if user.is_authenticated %}#}
-{#                Hi {{ user.username }}!#}
-{#                <p><a href="{% url 'logout' %}">logout</a></p>#}
-{#            {% else %}#}
-{#                <p>You are not logged in</p>#}
-{#                <a href="{% url 'login' %}">login</a>#}
-{#                <p><a href="{% url 'password_reset' %}">reset password</a></p>#}
-{#            {% endif %}#}
-{#            </div>#}
-            <hr/>
-            <p>Copyright 2019 Ryan Burton</p>
-        </div>
-    </div>
+{% block footer %}
+
+{% endblock %}
 </div>
 </body>
 
